# changelogger

./: .editorconfig  .gitignore  .lefthook.yaml  AUTHORS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  cargo-config.toml  devcontainer.json
.devcontainer/script/: install.sh
.github/: manifest.yaml
.github/workflows/: ci.yaml  pr.yaml
src/: app.rs  cli.rs  errors.rs  git.rs  logging.rs  main.rs  settings.rs
