[package]
name = "changelogger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
config = "0.15.22"
log = { version = "0.4.29", features = ["std"] }
mockcmd = "0.0.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
termcolor = "1.4.1"

[dev-dependencies]
current_dir = "0.1.2"
mktemp = "0.5.1"
mockall = "0.14.0"
mockcmd = { version = "0.0.1", features = ["test"] }
